# LAB5_MAI-OOP-LABS-cpp-2025-Public

./: README.md  docker-compose.yml
lab5_var17/: CMakeLists.txt
lab5_var17/include/: custom_memory_resource.hpp  stack.hpp
lab5_var17/src/: custom_memory_resource.cpp
lab5_var17/tests/: test_stack.cpp
